--- a/gradle.properties
+++ b/gradle.properties
@@ -11,3 +11,5 @@ PROTOBUF_DEPENDENCY=com.google.protobuf.nano:protobuf-javanano:3.0.0-alpha-7
 
 BUILD_TOOLS_VERSION=28.0.3
 COMPILE_SDK=android-S
+
+protocVersion=3.11.0
